namespace MediaSearch.Models;
public enum EMediaType {
  Unknown,
  Movie,
  Serie,
  SerieSeason,
  SerieEpisode,
  Music,
  Video,
  Theatre,
  Spectacle,
  Concert,
  eBook,
  eBookAudio,
  Podcast
}
