namespace MediaSearch.Models;
public enum EStorageType {
  Unknown = 0,
  Book = 1,
  DVD = 2,
  CD = 3,
  BluRay = 4,
  Magazine = 5,
  Tape = 6,
  Vinyl = 7
}
