---
title: "Models2 classes"
---
classDiagram

class IMedia {
  <<interface>>
  + Name : string
  + MediaType : EMediaType
  + DateAdded : DateOnly
  + DefaultLanguage : ELanguage
  + IsInvalid : bool
}

class AMedia {
  <<abstract>>
  + Name : string
  + DEFAULT_LANGUAGE$ : ELanguage
  + Id : string
  + MediaType : EMediaType
  + DefaultLanguage : ELanguage
  + DateAdded : DateOnly
  + CreationDate : DateOnly
  + CreationYear : int
  + Groups : List~string~
  + IsGroupMember : bool
  + IsInvalid : bool
  # MediaInfos : IMediaInfos
  # MediaSources : IMediaSources
  # MediaPictures : IMediaPictures
}

class IMediaSources {
  <<interface>>
  + GetDefaul() : IMediaSource?
  + Get(ELanguage) : IMediasource?
  + GetAll() : IEnumerable~IMediaSource~
  + Add(params IMediaSource[]) : bool
  + AddRange(IEnumerable~IMediaSource~) : bool
  + Remove(IMediaSource) : bool
  + Clear()
  + SetDefault(IMediaSource)
}
  class IMediaSource {
    <<interface>>
    + DateAdded : DateOnly
    + CreationDate : DateOnly
    + CreationYear : int
    + Description : string
    + Languages : IListWithPrincipal~ELanguage~
  }
    class IMediaSourcePhysical {
      <<interface>>
      + StoragePlace : string
      + StorageType : EStorageType
    }
    class IMediaSourceVirtual {
      <<interface>>
      + StorageRoot : string
      + StoragePath : string
      + FileName : string
      + FileExtension : string
      + FullFileName : string
      + Size : long
      + MediaStreams : IMediaStreams
    }

class IMediaInfos {
  <<interface>>
  + GetDefault() : IMediaInfo?
  + Get(ELanguage) : IMediaInfo?
  + GetAll() : IEnumerable~IMediaInfo~
  + Add(params IMediaInfo[])
  + AddRange(IEnumerable~IMediaInfo~)
  + Remove(IMediaInfo)
  + Clear()
  + SetDefault(IMediaInfo)
}
  class IMediaInfo {
    <<interface>>
    + DateOnly : DateAdded
    + DateOnly : CreationDate
    + int : CreationYear
    + string : Description
    + IListWithPrincipal~ELanguage~ : Languages
    + List~string~ : Tags
  }

class IMediaPictures {
  <<interface>>
  + GetDefault() : IMediaPicture?
  + Get(ELanguage) : IMediaPicture?
  + GetAll() : IEnumerable~IMediaPicture~
  + Add(params IMediaPicture[]) : bool
  + AddRange(IEnumerable~IMediaPicture~) : bool
  + Remove(IMediaPicture) : bool
  + Clear()
  + SetDefault(IMediaPïcture)
}
  class IMediaPicture {
    <<interface>>
  }

  class EMediaType {
    <<enum>>
    Unknown
    Movie
    Serie
    SerieSeason
    SerieEpisode
    Music
    Video
    Theatre
    Spectacle
    Concert
    eBook
    eBookAudio
    Podcast
  }

  class ELanguage {
    Unknown
    French
    FrenchFrance
    FrenchQuebec
    FrenchBelgium
    English
    EnglishUs
    EnglishUk
    Chinese
    ChineseCantonese
    ChineseMandarin
    Japanese
    Korean
    German
    Dutch
  }

  class EStorageType {
    <<enum>>
    Unknown = 0,
    Book = 1,
    DVD = 2,
    CD = 3,
    BluRay = 4,
    Magazine = 5,
    Tape = 6,
    Vinyl = 7
  }

  class TMediaMovie {
  }

  class IMediaStreams {
    <<interface>>
    + Add(params IMediaStreams[]) : bool
    + AddRange(IEnumerable~IMediaStream~) : bool
    + Get(int) : IMediaStream?
    + GetAll() : IEnumerable~IMediaStream~
    + Remove(IMediaStream) : bool
    + Clear()
    + Any() : bool
    + Any(Predicate~IMediaStream~) : bool
    + IsEmpty()
  }

AMedia "1" --> "0..n" IMediaSources
AMedia "1" --> "1..n" IMediaInfos
AMedia "1" --> "0..n" IMediaPictures
AMedia ..> EMediaType
AMedia ..|> IMedia

TMediaMovie --|> AMedia : inheritance
TMediaSerie --|> AMedia : inheritance
TMediaSerieSeason --|> AMedia : inheritance
TMediaSerieSeasonEpisode --|> AMedia : inheritance

IMediaSources ..> IMediaSource
IMediaSources ..> ELanguage

IMediaInfos ..> IMediaInfo
IMediaInfos ..> ELanguage

IMediaPictures ..> IMediaPicture
IMediaPictures ..> ELanguage

 IMediaSourceVirtual --|> IMediaSource : composition
 IMediaSourceVirtual "1" --> "1" IMediaStreams : contains
 
 IMediaSourcePhysical --|> IMediaSource : composition
 IMediaSourcePhysical <.. EStorageType